--- a/scss/estilos.css
+++ b/scss/estilos.css
@@ -1034,7 +1034,7 @@ label {
 .footer-content .footer-content__copyright {
   align-self: flex-end;
   background-color: #cf9ffc;
-  color: #3b1352;
+  color: #4c2f63;
   font-family: monospace;
   line-height: 3;
   text-align: center;
