--- a/scss/_mediaQ.scss
+++ b/scss/_mediaQ.scss
@@ -1,3 +1,52 @@
+@media (max-width: 1200px){
+    .fondo_creators {
+        height: 800px;
+    }
+}
+@media all and (max-width: 1100px){
+    .image-creators{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .image-creators__son{
+        margin-bottom: 30px;
+        padding: auto;
+        padding: 0 8%;
+    }
+    .image-creators__son img{
+        max-width: 100%;
+        height: auto;
+    }
+}
+@media all and (max-width: 991.98px){
+    .slider{
+        border-radius: 0 0;
+    }
+    .fondo{
+        height: 480px;
+    }
+    .parrafo h1{
+        margin-top: 0;
+    }
+    .slider{
+        border-radius: 0 0;
+    }
+    .fondo_creators{
+        height: 750px;
+    }
+    .flex-content__item {
+        height: 150px;
+        width: 150px;
+    }
+    .fondoEpisodes {
+        height: 650px;
+        margin-bottom: 3rem;
+    }
+    .characters_title{
+        height: 550px;
+    }
+}
 @media all and (max-width: 767.98px){
     .logo {
         height: 180px;
@@ -128,57 +177,18 @@
         border: none;
     }
 }
-@media all and (max-width: 991.98px){
-    .slider{
-        border-radius: 0 0;
-    }
-    .fondo{
-        height: 480px;
-    }
-    .parrafo h1{
-        margin-top: 0;
-    }
-    .slider{
-        border-radius: 0 0;
-    }
-    .fondo_creators{
-        height: 550px;
-    }
-    .flex-content__item {
-        height: 150px;
-        width: 150px;
-    }
-    .fondoEpisodes {
-        height: 650px;
-        margin-bottom: 3rem;
-    }
-    .characters_title{
-        height: 550px;
-    }
-}
-@media all and (max-width: 1100px){
-    .image-creators{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-    .image-creators__son{
-        margin-bottom: 30px;
-        padding: auto;
-        padding: 0 8%;
-    }
-    .image-creators__son img{
-        max-width: 100%;
-        height: auto;
+@media (max-width: 650px){
+    .fondo_creators {
+        height: 500px; 
     }
 }
 @media (min-width: 1200px){
     .fondoEpisodes {
-        height: 80vh;
+        height: 1000px;
         margin-bottom: 5rem;
     }
     .fondo_creators {
-        height: 80vh;
+        height: 80vh; 
     }
     .footer-content {
         margin-top: 50px;
@@ -191,5 +201,10 @@
         line-height: 3;
         text-align: center;
         width: 100%;
+    }
+}
+@media (min-width: 2400px){
+    .fondo_creators {
+        height: 1500px;
     }
 }
