--- a/scss/estilos.css
+++ b/scss/estilos.css
@@ -133,7 +133,9 @@ label {
 .fondo_creators {
   background-image: url(../media/creators.jpg);
   background-position: center;
-  height: 1000px;
+  background-size: cover;
+  width: 100%;
+  height: 30vh;
 }
 
 .creators {
@@ -722,6 +724,64 @@ label {
   height: 100px;
 }
 
+@media (max-width: 1200px) {
+  .fondo_creators {
+    height: 800px;
+  }
+}
+@media all and (max-width: 1100px) {
+  .image-creators {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .image-creators__son {
+    margin-bottom: 30px;
+    padding: auto;
+    padding: 0 8%;
+  }
+
+  .image-creators__son img {
+    max-width: 100%;
+    height: auto;
+  }
+}
+@media all and (max-width: 991.98px) {
+  .slider {
+    border-radius: 0 0;
+  }
+
+  .fondo {
+    height: 480px;
+  }
+
+  .parrafo h1 {
+    margin-top: 0;
+  }
+
+  .slider {
+    border-radius: 0 0;
+  }
+
+  .fondo_creators {
+    height: 750px;
+  }
+
+  .flex-content__item {
+    height: 150px;
+    width: 150px;
+  }
+
+  .fondoEpisodes {
+    height: 650px;
+    margin-bottom: 3rem;
+  }
+
+  .characters_title {
+    height: 550px;
+  }
+}
 @media all and (max-width: 767.98px) {
   .logo {
     height: 180px;
@@ -949,62 +1009,14 @@ label {
     border: none;
   }
 }
-@media all and (max-width: 991.98px) {
-  .slider {
-    border-radius: 0 0;
-  }
-
-  .fondo {
-    height: 480px;
-  }
-
-  .parrafo h1 {
-    margin-top: 0;
-  }
-
-  .slider {
-    border-radius: 0 0;
-  }
-
+@media (max-width: 650px) {
   .fondo_creators {
-    height: 550px;
-  }
-
-  .flex-content__item {
-    height: 150px;
-    width: 150px;
-  }
-
-  .fondoEpisodes {
-    height: 650px;
-    margin-bottom: 3rem;
-  }
-
-  .characters_title {
-    height: 550px;
-  }
-}
-@media all and (max-width: 1100px) {
-  .image-creators {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .image-creators__son {
-    margin-bottom: 30px;
-    padding: auto;
-    padding: 0 8%;
-  }
-
-  .image-creators__son img {
-    max-width: 100%;
-    height: auto;
+    height: 500px;
   }
 }
 @media (min-width: 1200px) {
   .fondoEpisodes {
-    height: 80vh;
+    height: 1000px;
     margin-bottom: 5rem;
   }
 
@@ -1024,6 +1036,11 @@ label {
     line-height: 3;
     text-align: center;
     width: 100%;
+  }
+}
+@media (min-width: 2400px) {
+  .fondo_creators {
+    height: 1500px;
   }
 }
 .footer-content {
