--- a/scss/estilos.css
+++ b/scss/estilos.css
@@ -1029,11 +1029,11 @@ label {
   }
 
   .fondo_creators {
-    height: 80vh;
+    height: 1000px;
   }
 
   .characters_title {
-    height: 80vh;
+    height: 1000px;
   }
 
   .footer-content {
