--- a/scss/_mediaQ.scss
+++ b/scss/_mediaQ.scss
@@ -193,10 +193,10 @@
         margin-bottom: 5rem;
     }
     .fondo_creators {
-        height: 80vh; 
+        height: 1000px; 
     }
     .characters_title{
-        height: 80vh;
+        height: 1000px;
     }
     .footer-content {
         margin-top: 50px;
@@ -217,6 +217,5 @@
     }
     .characters_title{
         height: 1800px;
-        
     }
 }
