--- a/scss/estilos.css
+++ b/scss/estilos.css
@@ -718,10 +718,14 @@ label {
 .navbar .nav-item {
   font-family: monospace;
   padding: 1rem;
-  color: #d8cce3;
 }
 .navbar .logo {
   height: 100px;
+}
+
+.active a {
+  color: #fad4f9 !important;
+  border-style: ridge;
 }
 
 @media (max-width: 1200px) {
