--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -93,11 +93,36 @@ body {
     background-color: #4a1663;
     margin: auto;
 }
-.button{
+.btn-primary{
     color: #28034d;
     background-color: #cf9ffc;
     border: none;
 }
+.btn-primary:hover{
+    color: #cf9ffc;
+    background-color: #28034d;
+    border: none;
+}
+.btn-primary:focus{
+    color: #28034d;
+    background-color: #cf9ffc;
+    border-color: #28034d;
+    box-shadow: none;
+}
+.btn-primary:not(:disabled):not(.disabled).active, .btn-primary:not(:disabled):not(.disabled):active, .show>.btn-primary.dropdown-toggle {
+    color: #28034d;
+    background-color: #cf9ffc;
+    border-color: none;
+}
+.modal-header{
+    color: #28034d;
+    background-color: #cf9ffc;
+}
+.modal-body{
+    background-color: #28034d;
+    color: #cf9ffc;
+}
+
 label {
     color: #ab9ab3;
     font-family: fantasy;
